<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightThyFire</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="quit_button">Quit</string>
    <string name="reset_button">Reset</string>
    <string name="init_velocity">Velocity</string>
    <string name="angle_degree">Degree</string>
    <string name="enter_input_button">Enter</string>

</resources>
